--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Django\\DjangoEnv\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\eshan\\.virtualenvs\\hoffame-project-sFtz8Hec\\Scripts\\python.exe"
 }
